<resources>
    <string name="app_name">LKJ</string>
    <string name="action_settings_1">测试1: 定位设备</string>
    <string name="action_settings_2">测试2: 高德导航</string>
    <string name="action_settings_3">测试3: 测量路径 </string>
    <string name="action_settings_4">测试4: 设备列表 </string>
    <string name="action_settings_5">测试5: xxx </string>
    <string name="action_settings_6">测试6: xxx </string>

    <string name="title_activity_arc_gis">ArcGISActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
