<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item android:id="@+id/action_settings_1"
          android:title="@string/action_settings_1"
          android:icon="@drawable/arcgisruntime_location_display_acquiring_symbol"/>
    <item android:id="@+id/action_settings_2"
          android:title="@string/action_settings_2"/>
    <item android:id="@+id/action_settings_3"
          android:title="@string/action_settings_3"/>
    <item android:id="@+id/action_settings_4"
          android:title="@string/action_settings_4"/>

    <item android:title="其他">
        <menu>
            <item android:id="@+id/action_settings_5"
                  android:title="@string/action_settings_5"
                  android:icon="@drawable/arcgisruntime_location_display_acquiring_symbol"/>
            <item android:id="@+id/action_settings_6"
                  android:title="@string/action_settings_6"
                  android:icon="@drawable/arcgisruntime_location_display_acquiring_symbol"/>
        </menu>
    </item>

</menu>
